# codeql-go

./: .gitignore  BUILD.bazel  Makefile  README.md  Readme.md  codeql-workspace.yml  go.mod  go.sum
.github/workflows/: check-change-note.yml  codeqltest.yml
change-notes/: 2020-05-04-gin-model.md  2020-06-11-build-tracing.md  2020-07-28-build-flags.md
change-notes/1.24/: analysis-go.md  extractor-go.md
change-notes/1.25/: analysis-go.md
codemill-specs/web-frameworks/: FastHTTP.json
codeql-tools/: autobuild.cmd  autobuild.sh  do-build  pre-finalize.cmd  pre-finalize.sh
codeql-tools/linux64/: compiler-tracing.spec
codeql-tools/win64/: compiler-tracing.spec
created a fork of this project/: README.md
docs/language/learn-ql/go/: ast-class-reference.rst
extractor/: BUILD.bazel  extractor.go  go.mod  go.sum  gomodextractor.go
extractor/autobuilder/: BUILD.bazel  autobuilder.go
extractor/cli/go-autobuilder/: BUILD.bazel  go-autobuilder.go
extractor/cli/go-bootstrap/: BUILD.bazel
extractor/cli/go-build/: go-build.go
extractor/cli/go-build-runner/: BUILD.bazel
extractor/cli/go-extractor/: BUILD.bazel  go-extractor.go
extractor/cli/go-gen-dbscheme/: BUILD.bazel
extractor/cli/go-tokenizer/: BUILD.bazel
extractor/dbscheme/: BUILD.bazel
extractor/srcarchive/: BUILD.bazel
extractor/trap/: BUILD.bazel
extractor/util/: BUILD.bazel  util.go
ql/config/legacy-support/: qlpack.yml
ql/examples/: qlpack.yml
ql/examples/queries/: DatabaseCallInLoop.ql  GORMErrorNotChecked.ql
ql/examples/snippets/: calltobuiltin.ql  calltofunction.ql  calltomethod.ql
ql/lib/: CHANGELOG.md  qlpack.yml
ql/lib/change-notes/: 2021-01-13-deprecated-function-get-a-call.md
ql/lib/change-notes/released/: 0.0.6.md
ql/lib/semmle/go/: Scopes.qll  StringOps.qll
ql/src/: AlertSuppression.ql  CHANGELOG.md  go.dbscheme.stats  go.qll  qlpack.lock.yml  qlpack.yml
ql/src/InconsistentCode/: BUILD.bazel  ConstantLengthComparison.ql  DatabaseCallInLoop.ql  GORMErrorNotChecked.ql  LengthComparisonOffByOne.ql  MissingErrorCheck.ql
ql/src/RedundantCode/: BUILD.bazel  NegativeLengthCheck.ql
ql/src/Security/CORSchecking/: CORSChecking.ql
ql/src/Security/CWE-020/: BUILD.bazel
ql/src/Security/CWE-022/: BUILD.bazel
ql/src/Security/CWE-078/: BUILD.bazel
ql/src/Security/CWE-079/: BUILD.bazel
ql/src/Security/CWE-089/: BUILD.bazel
ql/src/Security/CWE-190/: BUILD.bazel
ql/src/Security/CWE-209/: BUILD.bazel  StackTraceExposure.ql
ql/src/Security/CWE-295/: BUILD.bazel
ql/src/Security/CWE-312/: BUILD.bazel
ql/src/Security/CWE-322/: BUILD.bazel  InsecureHostKeyCallback.ql
ql/src/Security/CWE-327/: BUILD.bazel  InsecureTLS.ql
ql/src/Security/CWE-352/: BUILD.bazel  ConstantOauth2State.ql
ql/src/Security/CWE-601/: BUILD.bazel  BadRedirectCheck.ql
ql/src/Security/CWE-640/: BUILD.bazel
ql/src/Security/CWE-643/: BUILD.bazel
ql/src/Security/CWE-681/: BUILD.bazel
ql/src/Security/CWE-798/: BUILD.bazel
ql/src/Security/CWE-918/: BUILD.bazel
ql/src/Security/CookieAttributesChecking/: CookieAttributesChecking.ql
ql/src/Security/UnsafetySignatureGenerate/: UnSafetySignatureGenerate.ql
ql/src/change-notes/: 2022-05-04-add-extra-string-replace-sanitizers.md
ql/src/experimental/: MissingErrorCheck.ql  MissingErrorCheckTake2.ql
ql/src/experimental/CORSchecking/: CORSChecking.qhelp  CORSChecking.ql
ql/src/experimental/CWE-089/: Pgx.qll  PgxSqlInjection.go  PgxSqlInjection.qhelp  PgxSqlInjection.ql  PgxSqlInjectionGood.go
ql/src/experimental/CWE-090/: LDAPInjection.qll
ql/src/experimental/CWE-285/: PamAuthBypass.ql  PamAuthBypassLocal.ql
ql/src/experimental/CWE-311/: BinaryDownloadExecuteBad.go  BinaryDownloadExecuteGood.go  InsecureBinaryDownloadExecute.qhelp  InsecureBinaryDownloadExecute.ql
ql/src/experimental/CWE-321/: HardcodedKeys.qhelp  HardcodedKeysLib.qll
ql/src/experimental/CWE-322/: InsecureHostKeyCallback.qhelp  InsecureHostKeyCallback.ql  InsecureHostKeyCallbackExample.go  InsecureIgnoreHostKeyExample.go
ql/src/experimental/CWE-327/: InsecureRandomness.qhelp  InsecureRandomness.ql  InsecureRandomnessCustomizations.qll  WeakCryptoAlgorithm.qhelp  WeakCryptoAlgorithmCustomizations.qll
ql/src/experimental/CWE-330/: JWTWeakSecretKeyVerification.qhelp  JWTWeakSecretKeyVerification.ql  JWTWeakSecretKeyVerificationBad.go
ql/src/experimental/CWE-347/: JWTWeakSecretKeyVerification.qhelp  JWTWeakSecretKeyVerification.ql  JWTWeakSecretKeyVerificationGood.go
ql/src/experimental/CWE-352/: Csrf.ql  Csrf.qll  CsrfCustomizations.qll
ql/src/experimental/CWE-369/: DivideByZero.ql
ql/src/experimental/CWE-79/: HTMLTemplateEscapingPassthrough.ql
ql/src/experimental/CWE-807/: BUILD.bazel
ql/src/experimental/CWE-840/: BUILD.bazel
ql/src/experimental/CWE-918/: validator.qll
ql/src/experimental/CookieAttributesChecking/: CookieAttributesChecking.qhelp  CookieAttributesChecking.ql
ql/src/experimental/Gin/: Gin.go  Gin.qhelp  Gin.qll
ql/src/experimental/IntegerOverflow/: BUILD.bazel
ql/src/experimental/Unsafe/: BUILD.bazel
ql/src/experimental/UnsafetySignatureGenerate/: UnSafeSignatureGenerate.ql  UnSafetySignatureGenerate.qhelp  UnSafetySignatureGenerate.ql
ql/src/experimental/frameworks/: CleverGo.qll  FastHTTP.qll  Fiber.qll  Gin.qll  Pgx.qll
ql/src/semmle/go/: BoolOps.qll  Concepts.qll  Expr.qll  Scopes.qll  Types.qll
ql/test/: go.mod  qlpack.yml
ql/test/TestUtilities/: InlineFlowTest.qll
ql/test/consistency/: BUILD.bazel
ql/test/example-tests/snippets/: BUILD.bazel
ql/test/experimental/CORSchecking/: default.go
ql/test/experimental/CWE-285/: PamAuthBypass.expected  PamAuthBypass.qlref  go.mod
ql/test/experimental/CWE-311/: InsecureBinaryDownloadExecute.expected  InsecureBinaryDownloadExecute.go  InsecureBinaryDownloadExecute.qlref
ql/test/experimental/CWE-321/: HardcodedKeys.expected  go.mod  main.go
ql/test/experimental/CWE-322/: InsecureHostKeyCallback.expected
ql/test/experimental/CWE-327/: BUILD.bazel  InsecureRandomness.go
ql/test/experimental/CWE-640/: EmailInjection.expected  email.go
upgrades/: qlpack.yml
(+451 files in other folders)
