load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "CWE-020_lib",
    srcs = [
        "IncompleteHostnameRegexp.go",
        "IncompleteHostnameRegexpGood.go",
        "IncompleteUrlSchemeCheck.go",
        "IncompleteUrlSchemeCheckGood.go",
        "MissingRegexpAnchor.go",
        "MissingRegexpAnchorGood.go",
        "SuspiciousCharacterInRegexp.go",
        "SuspiciousCharacterInRegexpGood.go",
    ],
    importpath = "github.com/github/codeql-go/ql/src/Security/CWE-020",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "CWE-020",
    embed = [":CWE-020_lib"],
    visibility = ["//visibility:public"],
)
