load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "CWE-022_lib",
    srcs = [
        "TaintedPath.go",
        "ZipSlip.go",
        "ZipSlipGood.go",
    ],
    importpath = "github.com/github/codeql-go/ql/src/Security/CWE-022",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "CWE-022",
    embed = [":CWE-022_lib"],
    visibility = ["//visibility:public"],
)
