load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "CWE-089_lib",
    srcs = [
        "SqlInjection.go",
        "SqlInjectionGood.go",
        "StringBreak.go",
        "StringBreakGood.go",
    ],
    importpath = "github.com/github/codeql-go/ql/src/Security/CWE-089",
    visibility = ["//visibility:private"],
    deps = ["@com_github_masterminds_squirrel//:go_default_library"],
)

go_binary(
    name = "CWE-089",
    embed = [":CWE-089_lib"],
    visibility = ["//visibility:public"],
)
