load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "CWE-190_lib",
    srcs = [
        "AllocationSizeOverflow.go",
        "AllocationSizeOverflowGood.go",
    ],
    importpath = "github.com/github/codeql-go/ql/src/Security/CWE-190",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "CWE-190",
    embed = [":CWE-190_lib"],
    visibility = ["//visibility:public"],
)
