load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "CWE-295_lib",
    srcs = ["DisabledCertificateCheck.go"],
    importpath = "github.com/github/codeql-go/ql/src/Security/CWE-295",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "CWE-295",
    embed = [":CWE-295_lib"],
    visibility = ["//visibility:public"],
)
