load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "CWE-312_lib",
    srcs = [
        "CleartextLogging.go",
        "CleartextLoggingGood.go",
    ],
    importpath = "github.com/github/codeql-go/ql/src/Security/CWE-312",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "CWE-312",
    embed = [":CWE-312_lib"],
    visibility = ["//visibility:public"],
)
