load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "CWE-322_lib",
    srcs = [
        "InsecureHostKeyCallbackExample.go",
        "SecureHostKeyCallbackExample.go",
    ],
    importpath = "github.com/github/codeql-go/ql/src/Security/CWE-322",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_x_crypto//ssh:go_default_library"],
)

go_binary(
    name = "CWE-322",
    embed = [":CWE-322_lib"],
    visibility = ["//visibility:public"],
)
