load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "CWE-327_lib",
    srcs = [
        "InsecureTLS.go",
        "SaferTLS.go",
    ],
    importpath = "github.com/github/codeql-go/ql/src/Security/CWE-327",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "CWE-327",
    embed = [":CWE-327_lib"],
    visibility = ["//visibility:public"],
)
