load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "CWE-352_lib",
    srcs = [
        "ConstantOauth2StateBad.go",
        "ConstantOauth2StateBetter.go",
    ],
    importpath = "github.com/github/codeql-go/ql/src/Security/CWE-352",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_x_oauth2//:go_default_library"],
)

go_binary(
    name = "CWE-352",
    embed = [":CWE-352_lib"],
    visibility = ["//visibility:public"],
)
