load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "CWE-681_lib",
    srcs = [
        "IncorrectIntegerConversion.go",
        "IncorrectIntegerConversionGood.go",
    ],
    importpath = "github.com/github/codeql-go/ql/src/Security/CWE-681",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "CWE-681",
    embed = [":CWE-681_lib"],
    visibility = ["//visibility:public"],
)
