load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "CWE-918_lib",
    srcs = [
        "RequestForgery.go",
        "RequestForgeryGood.go",
    ],
    importpath = "github.com/github/codeql-go/ql/src/Security/CWE-918",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "CWE-918",
    embed = [":CWE-918_lib"],
    visibility = ["//visibility:public"],
)
