load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "IntegerOverflow_lib",
    srcs = [
        "IntegerOverflow.go",
        "IntegerOverflowGood.go",
    ],
    importpath = "github.com/github/codeql-go/ql/src/experimental/IntegerOverflow",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "IntegerOverflow",
    embed = [":IntegerOverflow_lib"],
    visibility = ["//visibility:public"],
)
